iframe border must not show on IE, bugfix content right-sided on IE

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -8,7 +8,8 @@ div#content { min-height:500px; }
 
 .view {  min-height:100px; }
 .view-in { background:white }
-.ajax-content-white { background-image: none !important; }
+.ajax-content-white { background-image: none !important;width:100%; }
+
 
 div#footer {margin:20px 0; !important}
 div#footer ul#menu-footer {padding-left: 300px !important}
